--- a/src/hotel/templates/admin.html
+++ b/src/hotel/templates/admin.html
@@ -35,10 +35,10 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Admin <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'admin' %}">Admin <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Rooms</a>
+        <a class="nav-link" href="{% url 'rooms' %}">Rooms</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Checkins</a>
