--- a/src/hotel/templates/roomslist.html
+++ b/src/hotel/templates/roomslist.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <!-- <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
 <link href="{% static 'css/all.css' %}" rel="stylesheet" type="text/css">
 <link href="{% static 'fontawesome/css/all.css' %}" rel="stylesheet" type="text/css">
@@ -18,13 +19,53 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
 </head>
 
 
-<body>
+<body style="background-color: #F0F0F0">
+
+<img src="{% static 'images/reception1.jpeg' %}" style="width: 100%; height: 200px; object-fit: cover;">
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item ">
+        <a class="nav-link" href="{% url 'admin' %}">Admin</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'rooms' %}">Rooms <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Checkins</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Bookings</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Customer profiles</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<br>
+<br>
+
+<div class="container">
+  <div class="row" style="background-color: white">
+    <div class="col-sm">
+      {% for room in rooms %}
+        {{room}}
+      {% endfor %}
+    </div>
+  </div>
+</div>
+
 
 </body>
 
