--- a/src/hotel/templates/room.html
+++ b/src/hotel/templates/room.html
@@ -64,19 +64,50 @@
     <div class="col-sm-3">
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-6">
+      <br>
+      {% if success %}
+        <div class="alert alert-success">
+          <strong>{{success}}</strong> 
+        </div>
+      {% endif %}
+      {% if error %}
+        <div class="alert alert-danger">
+          <strong>{{error}}</strong> 
+        </div>
+      {% endif %}
       <br>
       <form action="" method="POST" enctype="multipart/form-data"> {% csrf_token %}
         <div class="form-group">
+          <input type="hidden" id="action" name="action" value="edit">
+
+          <h5>Room number: {{room.id}}</h5>
+          <br>
           <label for="bed_type">Bed type:</label>
-          <input type="text" class="form-control" id="bed_type" aria-describedby="bed_type" placeholder="single / double.." value="{{ room.bed_type }}">
+          <input name="bed_type" type="text" class="form-control" id="bed_type" aria-describedby="bed_type" placeholder="single / double.." value="{{ room.bed_type }}">
           <small id="bed_type" class="form-text text-muted">Usually it refers to the bed width by EU standards</small>
         </div>
+
         <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+          <label for="facilities">Facilities</label>
+          <textarea name="facilities" class="form-control" class="form-control rounded-0" id="facilities" placeholder="" >{{room.facilities}}</textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+
+        <div class="form-group">
+          <label for="price">Price</label>
+          <input name="price" type="text" class="form-control" id="price" aria-describedby="bed_type" placeholder="" value="{{ room.price }}">
+        </div>
+
+        <button type="submit" class="btn btn-primary">Save</button>
+
+      </form>
+
+      <form action="" method="POST" enctype="multipart/form-data"> {% csrf_token %}
+
+            <input type="hidden" id="action" name="action" value="delete"><br>
+
+            <input type="submit" value="Delete" class="btn btn-danger" style="width: 85px; background-color: red; color: white">
+
       </form>
       <br>
     </div>
