--- a/src/hotel/templates/room.html
+++ b/src/hotel/templates/room.html
@@ -34,10 +34,10 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="{% url 'admin' %}">Admin <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active" >
         <a class="nav-link" href="{% url 'rooms' %}">Rooms</a>
       </li>
       <li class="nav-item">
@@ -60,8 +60,7 @@
   <div class="row" style="background-color: white">
 
 
-
-    <div class="col-sm-3">
+    <div class="col-sm-1">
     </div>
 
     <div class="col-sm-6">
@@ -106,16 +105,20 @@
 
             <input type="hidden" id="action" name="action" value="delete"><br>
 
-            <input type="submit" value="Delete" class="btn btn-danger" style="width: 85px; background-color: red; color: white">
+            <input type="submit" value="Delete" class="btn btn-danger" style="width: 60px; background-color: red; color: white">
 
       </form>
       <br>
     </div>
 
-    <div class="col-sm-3">
+
+    <div class="col-sm-5">
+      <br><br><br><br><br>
+      <img src="http://i.cbc.ca/1.2101005.1382019145!/fileImage/httpImage/image.jpg_gen/derivatives/16x9_1180/hotel-room.jpg" style="width: 100%; object-fit: cover;">
     </div>
 
   </div>
+  <br>
 </div>
 
 
