--- a/src/hotel/templates/add_room.html
+++ b/src/hotel/templates/add_room.html
@@ -41,7 +41,7 @@
         <a class="nav-link" href="{% url 'rooms' %}">Rooms</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Checkins</a>
+        <a class="nav-link" href="{% url 'checkins' %}">Checkins</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Bookings</a>
