--- a/src/hotel/templates/checkins_list.html
+++ b/src/hotel/templates/checkins_list.html
@@ -63,7 +63,7 @@
     </div>
   </div>
     <ul class="list-group">
-      <li class="list-group-item text-right"><span class="pull-left"><a href="">Add new checkin</a></li>
+      <li class="list-group-item text-right"><span class="pull-left"><a href="{% url 'addcheckin' %}">Add new checkin</a></li>
       {% for checkin in checkins %}
       
         <li class="list-group-item text-left">
