--- a/src/hotel/templates/bookings_list.html
+++ b/src/hotel/templates/bookings_list.html
@@ -35,15 +35,15 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item ">
-        <a class="nav-link" href="{% url 'admin' %}">Admin <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'admin' %}">Admin</a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url 'rooms' %}">Rooms</a>
+      <li class="nav-item ">
+        <a class="nav-link" href="{% url 'rooms' %}">Rooms <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'checkins' %}">Checkins</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="{% url 'bookings' %}">Bookings</a>
       </li>
       <li class="nav-item">
@@ -58,57 +58,34 @@
 
 <div class="container">
   <div class="row" style="background-color: white">
-
-
-
-    <div class="col-sm-3">
+    <div class="col-sm">
+      
     </div>
-
-    <div class="col-sm-6">
-      <br>
-      {% if success %}
-        <div class="alert alert-success">
-          <strong>{{success}}</strong> 
-        </div>
-      {% endif %}
-      {% if error %}
-        <div class="alert alert-danger">
-          <strong>{{error}}</strong> 
-        </div>
-      {% endif %}
-      <br>
-      <form action="" method="POST" enctype="multipart/form-data"> {% csrf_token %}
-        <div class="form-group">
-          <input type="hidden" id="action" name="action" value="edit">
-
-          <h5>Add new room</h5>
-          <br>
-          <label for="bed_type">Bed type:</label>
-          <input name="bed_type" type="text" class="form-control" id="bed_type" aria-describedby="bed_type" placeholder="single / double.." value="">
-          <small id="bed_type" class="form-text text-muted">Usually it refers to the bed width by EU standards</small>
-        </div>
-
-        <div class="form-group">
-          <label for="facilities">Facilities</label>
-          <textarea name="facilities" class="form-control" class="form-control rounded-0" id="facilities" placeholder="Single / double / queen.." ></textarea>
-        </div>
-
-        <div class="form-group">
-          <label for="price">Price</label>
-          <input name="price" type="text" class="form-control" id="price" aria-describedby="bed_type" placeholder="23 $" value="">
-        </div>
-
-        <button type="submit" class="btn btn-primary">Save</button>
-
-      </form>
-
-     <br>
-    </div>
-
-    <div class="col-sm-3">
-    </div>
-
   </div>
+    <ul class="list-group">
+      <li class="list-group-item text-right"><span class="pull-left"><a href="{% url 'addroom' %}">Add new booking</a></li>
+      {% for booking in bookings %}
+      
+        <li class="list-group-item text-left">
+            <a href="">{{booking}}</a>
+            <p>Booking ID: {{booking.id}}</p>
+            <p>For room ID: {{booking.room.id}}</p>
+            <p>Customer name: {{booking.customer_full_name}}</p>
+            <p>For period of time: {{booking.start_datetime}} - {{booking.end_datetime}}</p>
+            <small id="bed_type" class="form-text text-muted">Last modified on: {{booking.last_modified}}</small>
+        </li>
+      
+      {% endfor %}
+      <!-- <li class="list-group-item text-muted">Profil</li>
+      <li class="list-group-item text-left"> {{user.first_name}} {{user.last_name}}
+        {% if user.first_name == "" and user.last_name == "" %}
+           -
+        {% endif %}
+      </li>
+      <li class="list-group-item text-right"><span class="pull-left"><strong>Creat:</strong></span> {{ user.date_joined|date:'d M Y H:i' }}</li>
+      <li class="list-group-item text-right"><span class="pull-left"><strong>Activ:</strong></span> {{ user.last_login|date:'d M Y H:i' }}</li> -->
+
+    </ul>
 </div>
 
 
