--- a/src/hotel/templates/edit_checkin.html
+++ b/src/hotel/templates/edit_checkin.html
@@ -44,7 +44,7 @@
         <a class="nav-link" href="{% url 'checkins' %}">Checkins</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Bookings</a>
+        <a class="nav-link" href="{% url 'bookings' %}">Bookings</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Customer profiles</a>
