--- a/src/hotel/templates/checkins_list.html
+++ b/src/hotel/templates/checkins_list.html
@@ -67,7 +67,7 @@
       {% for checkin in checkins %}
       
         <li class="list-group-item text-left">
-            <a href="{% url 'editcheckin' id=checkin.id %}">{{checkin}}</a>
+            <a href="{% url 'editcheckin' id=checkin.id %}">#{{checkin.id}}</a>
             <p>Checkin ID: {{checkin.id}}</p>
             <p>For room ID: {{checkin.room.id}}</p>
             <p>Customer name: {{checkin.customer_full_name}}</p>
