--- a/src/hotel/templates/checkins_list.html
+++ b/src/hotel/templates/checkins_list.html
@@ -46,9 +46,15 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'bookings' %}">Bookings</a>
       </li>
+      {% if not user.is_authenticated %}
       <li class="nav-item">
-        <a class="nav-link" href="#">Customer profiles</a>
+        <a class="nav-link" href="{% url 'login' %}">Login</a>
       </li>
+      {% else %}
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+      </li>
+      {% endif %}
     </ul>
   </div>
 </nav>
