--- a/src/login/templates/registration/login.html
+++ b/src/login/templates/registration/login.html
@@ -34,20 +34,17 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item ">
+      <li class="nav-item active">
         <a class="nav-link" href="{% url 'admin' %}">Admin <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item active" >
+      <li class="nav-item " >
         <a class="nav-link" href="{% url 'rooms' %}">Rooms</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item ">
         <a class="nav-link" href="{% url 'checkins' %}">Checkins</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item ">
         <a class="nav-link" href="{% url 'bookings' %}">Bookings</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Customer profiles</a>
       </li>
     </ul>
   </div>
@@ -60,7 +57,7 @@
   <div class="row" style="background-color: white">
 
 
-    <div class="col-sm-1">
+    <div class="col-sm-3">
     </div>
 
     <div class="col-sm-6">
@@ -76,45 +73,33 @@
         </div>
       {% endif %}
       <br>
-      <form action="" method="POST" enctype="multipart/form-data"> {% csrf_token %}
+      
+      <form method="post">
         <div class="form-group">
-          <input type="hidden" id="action" name="action" value="edit">
-
-          <h5>Room number: {{room.id}}</h5>
-          <br>
-          <label for="bed_type">Bed type:</label>
-          <input name="bed_type" type="text" class="form-control" id="bed_type" aria-describedby="bed_type" placeholder="single / double.." value="{{ room.bed_type }}">
-          <small id="bed_type" class="form-text text-muted">Usually it refers to the bed width by EU standards</small>
+          {% csrf_token %}
+          {{ form.as_p }}
+          <button type="submit">Login</button>
         </div>
-
-        <div class="form-group">
-          <label for="facilities">Facilities</label>
-          <textarea name="facilities" class="form-control" class="form-control rounded-0" id="facilities" placeholder="" >{{room.facilities}}</textarea>
-        </div>
-
-        <div class="form-group">
-          <label for="price">Price</label>
-          <input name="price" type="text" class="form-control" id="price" aria-describedby="bed_type" placeholder="" value="{{ room.price }}">
-        </div>
-
-        <button type="submit" class="btn btn-primary">Save</button>
-
       </form>
+<!-- 
+      <form id="signinForm" method='POST'> {% csrf_token %}
+        <div class="form-group">
+                <h1>Sign in</h1>
 
-      <form action="" method="POST" enctype="multipart/form-data"> {% csrf_token %}
+                <input type="hidden" value="signin" name="whichForm">
+                <input type="email" placeholder="Email" name="email" />
+                <input type="password" placeholder="Password" name="password" />
 
-            <input type="hidden" id="action" name="action" value="delete"><br>
+                <button id="signinbutton" type="submit">Sign In</button>
+        </div>
+      </form> -->
 
-            <input type="submit" value="Delete" class="btn btn-danger" style="width: 60px; background-color: red; color: white">
-
-      </form>
       <br>
     </div>
 
 
-    <div class="col-sm-5">
-      <br><br><br><br><br>
-      <img src="http://i.cbc.ca/1.2101005.1382019145!/fileImage/httpImage/image.jpg_gen/derivatives/16x9_1180/hotel-room.jpg" style="width: 100%; object-fit: cover;">
+    <div class="col-sm-3">
+
     </div>
 
   </div>
