--- a/src/login/templates/registration/logout.html
+++ b/src/login/templates/registration/logout.html
@@ -35,26 +35,20 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item ">
-        <a class="nav-link" href="{% url 'admin' %}">Admin</a>
+        <a class="nav-link" href="{% url 'admin' %}">Admin <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url 'rooms' %}">Rooms <span class="sr-only">(current)</span></a>
+      <li class="nav-item " >
+        <a class="nav-link" href="{% url 'rooms' %}">Rooms</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item ">
         <a class="nav-link" href="{% url 'checkins' %}">Checkins</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="{% url 'bookings' %}">Bookings</a>
       </li>
-      {% if not user.is_authenticated %}
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'login' %}">Login</a>
+        <a class="nav-link" href="#">Customer profiles</a>
       </li>
-      {% else %}
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-      </li>
-      {% endif %}
     </ul>
   </div>
 </nav>
@@ -64,30 +58,22 @@
 
 <div class="container">
   <div class="row" style="background-color: white">
-    <div class="col-sm">
-      
-    </div>
-  </div>
-    <ul class="list-group">
-      <li class="list-group-item text-right"><span class="pull-left"><a href="{% url 'addroom' %}">Add new room</a></li>
-      {% for room in rooms %}
-      <a href="{% url 'room' id=room.id %}">
-        <li class="list-group-item text-left">
-            {{room}}
-            <small id="bed_type" class="form-text text-muted">Last modified on: {{room.last_modified}}</small>
-        </li>
-      </a>
-      {% endfor %}
-      <!-- <li class="list-group-item text-muted">Profil</li>
-      <li class="list-group-item text-left"> {{user.first_name}} {{user.last_name}}
-        {% if user.first_name == "" and user.last_name == "" %}
-           -
-        {% endif %}
-      </li>
-      <li class="list-group-item text-right"><span class="pull-left"><strong>Creat:</strong></span> {{ user.date_joined|date:'d M Y H:i' }}</li>
-      <li class="list-group-item text-right"><span class="pull-left"><strong>Activ:</strong></span> {{ user.last_login|date:'d M Y H:i' }}</li> -->
 
-    </ul>
+
+    <div class="col-sm-3">
+    </div>
+
+    <div class="col-sm-6">
+      <h5>You have been log out!</h5>
+    </div>
+
+
+    <div class="col-sm-3">
+
+    </div>
+
+  </div>
+  <br>
 </div>
 
 
